--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.main {
+	height: 90vh;
+}
+.footer {
+	border-top: 1px solid black;
+	padding: 1.5rem;
+}
