--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,76 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}
+  font-family: sans-serif; }
+
 .main {
-	height: 90vh;
-}
+  height: 90vh; }
+
 .footer {
-	border-top: 1px solid black;
-	padding: 1.5rem;
-}
+  border-top: 1px solid black;
+  padding: 1.5rem; }
+
+.babble-parent {
+  border: 1px solid black;
+  padding-bottom: 1rem; }
+
 .babble {
-	border: 1px solid black;
-	padding: 1rem;
-}
+  width: 100%;
+  border: 1px solid blue;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; }
+
+.babble .babble-user-row {
+  position: relative;
+  padding: 1rem; }
+
+.babble .babble-user-row .user-pic {
+  width: 70px;
+  border-radius: 7px; }
+
+.babble .babble-user-row .user-name, .babble .babble-user-row .user-handle {
+  display: inline-block;
+  vertical-align: top; }
+
+.babble .babble-user-row .user-name {
+  font-size: 1.7rem;
+  padding: 1rem; }
+
+.babble .babble-user-row .user-handle {
+  color: #999;
+  font-weight: bold;
+  font-size: 1.5rem; }
+
+.babble .babble-user-row .follow-user {
+  display: inline-block;
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  font-size: 1.5rem; }
+
+.babble .babble-text-row {
+  padding: 1rem; }
+
+.babble .babble-text-row .babble-text {
+  font-size: 1.8rem; }
+
+.babble .babble-text-row .babble-time {
+  font-family: monospace;
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: #999; }
+
+.babble .babble-action-row {
+  position: relative;
+  height: 3rem;
+  border-top: 1px solid #999; }
+
+.babble .babble-action-row .babble-like {
+  float: right;
+  padding-right: 2.5rem;
+  padding-top: 0.5rem;
+  font-size: 1.8rem;
+  color: #black; }
+
+.user-info {
+  border: 1px solid black; }
