--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,19 @@ body {
 
 .babble-parent {
   border: 1px solid black;
-  padding-bottom: 1rem; }
+  padding-bottom: 1rem;
+  min-height: 90vh; }
+
+.babble-parent textarea {
+  width: 100%;
+  margin-top: 0.5rem; }
 
 .babble {
   width: 100%;
   border: 1px solid blue;
   -webkit-border-radius: 5px;
-  border-radius: 5px; }
+  border-radius: 5px;
+  margin: 0.5rem 0rem; }
 
 .babble .babble-user-row {
   position: relative;
